# mcga-meta

./: CMakeLists.txt
include/mcga/: meta.hpp
include/mcga/meta/: cvref_same_as.hpp  manual_lifetime.hpp  tpack.hpp
tests/: cvref_same_as_test.cpp  manual_lifetime_test.cpp  tpack_test.cpp
